// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with largeViewport 1`] = `
<Headroom
  height={85}
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={85}
>
  <header
    className="header"
  >
    <div
      className="logoWide"
    >
      <Connect(Link)
        to={
          Object {
            "type": "RANDOM_ROUTE",
          }
        }
      >
        <img
          src="test-file-stub"
        />
      </Connect(Link)>
    </div>
    <HeaderNavigationBar
      className="navigationBar"
    >
      <HeaderNavigationItem
        active={true}
        href={
          Object {
            "type": "ANOTHER_RANDOM_ROUTE",
          }
        }
        selected={true}
        text="text1"
        tooltip="tooltip1"
      />
    </HeaderNavigationBar>
    <HeaderActionBar
      className="actionBar"
      items={
        Array [
          HeaderActionItem {
            "_href": Object {
              "type": "RANDOM_ROUTE",
            },
            "_iconSrc": undefined,
            "_node": undefined,
          },
        ]
      }
    />
  </header>
</Headroom>
`;

exports[`Header should match snapshot with smallViewport 1`] = `
<Headroom
  height={55}
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={55}
>
  <header
    className="header"
  >
    <div
      className="logoWide"
    >
      <Connect(Link)
        to={
          Object {
            "type": "RANDOM_ROUTE",
          }
        }
      >
        <img
          src="test-file-stub"
        />
      </Connect(Link)>
    </div>
    <HeaderNavigationBar
      className="navigationBar"
    >
      <HeaderNavigationItem
        active={true}
        href={
          Object {
            "type": "ANOTHER_RANDOM_ROUTE",
          }
        }
        selected={true}
        text="text1"
        tooltip="tooltip1"
      />
    </HeaderNavigationBar>
    <HeaderActionBar
      className="actionBar"
      items={
        Array [
          HeaderActionItem {
            "_href": Object {
              "type": "RANDOM_ROUTE",
            },
            "_iconSrc": undefined,
            "_node": undefined,
          },
        ]
      }
    />
  </header>
</Headroom>
`;
